# gtimer

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml
src/gtimer/: __init__.py  __main__.py  admin.py  allowance.py  auth.py  config.py  formatting.py  i3_adapter.py  identity.py  matching.py  models.py  persistence.py  system.py  tracker.py  ui.py
tests/: test_admin_adjust.py  test_admin_balance.py  test_allowance.py  test_auth.py  test_config.py  test_matching.py  test_persistence.py  test_tracker.py
