[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gtimer"
version = "0.1.0"
description = "An i3-aware time keeping app for focused-window play time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "i3ipc>=2.2",
]

[project.scripts]
gtimer = "gtimer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
